fix: color contrast

--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -15,7 +15,7 @@
     text-align: center
     text-transform: uppercase
     font-weight: 700
-    color: var(--roxo-claro)
+    color: var(--main-color)
 
 .container
     display: flex
@@ -39,7 +39,7 @@
     justify-content: flex-start
     align-items: center
     font-size: 22px
-    color: rgba(255, 255, 255, .7)
+    opacity: .9
     gap: 4px
     list-style-type: none
     
@@ -59,7 +59,7 @@
 .bx-mobile-alt, .bx-envelope
     
     font-size: 38px
-    color: var(--roxo-claro)
+    color: var(--main-color)
 
 .copy .bx-copy
     color: rgba(255, 255, 255, 0.61)
@@ -74,8 +74,7 @@
     color: rgba(255, 255, 255, 0.671)
 
 .copy:active
-    background: rgba(190, 8, 245, 0.295)
-    color: rgba(190, 8, 245, 0.884)
+    background: var(--main-color)
 
 .btn-whats
     display: flex
@@ -85,11 +84,11 @@
     width: 200px
     margin: 10px 0 0 20px
     
-    border: 2px solid var(--roxo-claro)
+    border: 2px solid var(--main-color)
     border-radius: 10px
     background: none
     cursor: pointer
-    color: var(--roxo-claro)
+    color: var(--main-color)
     font-size: 18px
     text-transform: uppercase
     font-weight: 600
@@ -100,7 +99,7 @@
     font-size: 28px
 
 .btn-whats:hover
-    background: var(--roxo-claro)
+    background: var(--main-color)
     color: white
     transform: scale (1.3)translateY(-5px)
     box-shadow: 0 0 25px var(--main-color)
