--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -5,7 +5,7 @@
     align-items: center 
 
     height: 80px
-    background: rgba(91, 8, 107, 0.671)
+    background: var(--second-color)
 
 .footer p
     font-size: 20px
@@ -15,10 +15,11 @@
 
 .footer a
     text-decoration: none
-    color: rgba(197, 3, 171, 0.733)
+    color: var(--blue)
 
 .footer a:active
-    color: rgb(255, 0, 221)
+    color: #9c09ff
+    
 
 @media (0px <= width <= 590px)
     .footer
