--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -75,7 +75,7 @@
     overflow: hidden
     border-radius: 50%
     background: var(--main-color)
-    box-shadow: 0 0 25px var(--roxo-claro)
+    box-shadow: 0 0 25px var(--main-color)
     transition: 0.4s ease-in-out
     cursor: pointer
 
@@ -93,7 +93,7 @@
         transform: translateY(50px)
 
 .content-right:hover
-    box-shadow: 0 0 50px var(--roxo-claro), 0 0 100px var(--roxo-claro)
+    box-shadow: 0 0 50px var(--main-color), 0 0 100px var(--main-color)
 
 
 @media (0 <= width <= 1220px)
