--- a/src/app/components/projects/projects.component.sass
+++ b/src/app/components/projects/projects.component.sass
@@ -9,6 +9,7 @@ h3
     justify-content: center
     margin: 4rem 0
     font-size: 5rem
+    text-shadow: 0 0 100px var(--main-color)
 
 .projects
     display: flex
@@ -38,7 +39,7 @@ h3
     top: 13.75rem
     width: 100%
     border-radius: 20px 20px 0 0 
-    background-color: rgb(66, 39, 114)
+    background-color: var(--second-color)
     padding: 2.125rem
     transition: top 0.4s ease
 
@@ -73,7 +74,8 @@ h3
     padding: 15px
     margin-right: 10px
     background: transparent
-    color: #a7a7a7
+    color: var(--text-color)
+    opacity: .8
     border-radius: 20px
     border: 1px solid #a7a7a7
     transition: 0.3s ease-in-out
@@ -81,7 +83,7 @@ h3
     cursor: pointer
 
 .project-description a button:hover
-    color: white
+    opacity: 1
     border: 1px solid white
     transform: scale (1.3)translateY(-5px)
     box-shadow: 0 0 25px var(--main-color)
