--- a/src/app/components/skills/skills.component.sass
+++ b/src/app/components/skills/skills.component.sass
@@ -28,13 +28,14 @@
     gap: 8px
     justify-content: center
     align-items: center
-    background: rgb(53, 0, 70)
+    background: var(--second-color)
     box-shadow: 0 0 40px rgb(20, 8, 41)
    
     border-radius: 10px
 
-.skill h5
+.skill span
     font-size: 1.4rem
+    font-weight: 700
     text-shadow: 0 0 3px black
     margin: 0
     
@@ -42,7 +43,7 @@
     width: 4rem
     object-fit: cover
     margin: 10px
-    filter: drop-shadow(0 0 30px var(--main-color))
+    // filter: drop-shadow(0 0 30px var(--main-color))
 
 .skill progress
     height: 10px
@@ -89,7 +90,7 @@
         height: 170px
         gap: 0
         
-    .skill h5
+    .skill span
         font-size: 1rem
         margin: 0
     
