--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,9 +1,9 @@
 :root
-    --bg-color: #1b003a
+    --bg-color: #1B003A
     --second-bg-color: #230443
     --text-color: white
-    --main-color:#5f165e
-    --roxo-claro:#771d76
+    --main-color:#B195F0
+    --second-color: #2b1656
 
     --orange: #E34F26
     --orange-2: #DE4C36
